--- a/dev/index.html
+++ b/dev/index.html
@@ -14,6 +14,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="static/img/general/icons/compass180x180.png">
     <link rel="stylesheet" type="text/css" href="main/css/reset.css">
     <link rel="stylesheet" type="text/css" href="static/fonts/fonts.css">
+    <link rel="stylesheet" type="text/css" href="main/css/magnificPopup.css">
+    <link rel="stylesheet" type="text/css" href="../static/libs/slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="../static/libs/slick/slick-theme.css">
     <link rel="stylesheet" type="text/css" href="main/css/main.css">
     <title>Главная страница
     </title>
@@ -234,18 +237,176 @@
         </div>
       </div>
     </div>
-    <div class="cases">
-      <div class="case case_fashion">
-            <div class="case__descr"><span class="case__title">Fulwidth slides</span><span class="case__name">Fashion</span>
-              <button class="case__btn"></button>
+    <div class="portfolio">
+          <div class="portfolioPrev portfolioPrev_travel">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Travel</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#travel">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
-      </div>
-      <div class="case case_travel">
-            <div class="case__descr"><span class="case__title">Fulwidth slides</span><span class="case__name">Travel</span>
-              <button class="case__btn"></button>
+          </div>
+          <div class="portfolioPrev portfolioPrev_fashion">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Fashion</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#fashion">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
-      </div>
+          </div>
+          <div class="portfolioPrev portfolioPrev_fantasy">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Fantasy</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#fantasy">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="portfolioPrev portfolioPrev_animate">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Animate</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#animate">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="portfolioPrev portfolioPrev_1">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">1</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#1">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="portfolioPrev portfolioPrev_2">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">2</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#2">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="portfolioPrev portfolioPrev_3">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">3</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#3">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="portfolioPrev portfolioPrev_4">
+            <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">4</span>
+              <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#4">
+                  <button class="portfolioPrev__btn portfolioPrev__btn_view">
+                    <svg class="icon icon-search ">
+                      <use xlink:href="../static/img/svg/symbol/sprite.svg#search"></use>
+                    </svg>
+                  </button></a>
+                <button class="portfolioPrev__btn portfolioPrev__btn_link">
+                  <svg class="icon icon-link-symbol ">
+                    <use xlink:href="../static/img/svg/symbol/sprite.svg#link-symbol"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
     </div>
+        <div class="portfolioItem mfp-hide" id="fashion">
+              <div class="title portfolioItem__title">
+                <h2 class="title__main">Fashion</h2>
+              </div>
+          <div class="portfolioItem__slider slider-for">
+            <picture class="portfolioItem__pic">
+              <source srcset="../static/img/content/portfolio/prev1-966w-2x.jpg"><img src="../static/img/content/portfolio/prev1-966w-2x.jpg" alt="Fashion1">
+            </picture>
+            <picture class="portfolioItem__pic">
+              <source srcset="../static/img/content/portfolio/prev2-966w-2x.jpg"><img src="../static/img/content/portfolio/prev2-966w-2x.jpg" alt="Fashion2">
+            </picture>
+            <picture class="portfolioItem__pic">
+              <source srcset="../static/img/content/portfolio/prev3-966w-2x.jpg"><img src="../static/img/content/portfolio/prev3-966w-2x.jpg" alt="Fashion3">
+            </picture>
+            <picture class="portfolioItem__pic">
+              <source srcset="../static/img/content/portfolio/prev4-966w-2x.jpg"><img src="../static/img/content/portfolio/prev4-966w-2x.jpg" alt="Fashion4">
+            </picture>
+            <picture class="portfolioItem__pic">
+              <source srcset="../static/img/content/portfolio/prev5-966w-2x.jpg"><img src="../static/img/content/portfolio/prev5-966w-2x.jpg" alt="Fashion5">
+            </picture>
+          </div>
+          <div class="portfolioItem__sliderNav slider-nav">
+            <picture class="portfolioItem__prev">
+              <source srcset="../static/img/content/portfolio/prev1-483w.jpg"><img src="../static/img/content/portfolio/prev1-483w.jpg" alt="Fashion1">
+            </picture>
+            <picture class="portfolioItem__prev">
+              <source srcset="../static/img/content/portfolio/prev2-483w.jpg"><img src="../static/img/content/portfolio/prev2-483w.jpg" alt="Fashion2">
+            </picture>
+            <picture class="portfolioItem__prev">
+              <source srcset="../static/img/content/portfolio/prev3-483w.jpg"><img src="../static/img/content/portfolio/prev3-483w.jpg" alt="Fashion3">
+            </picture>
+            <picture class="portfolioItem__prev">
+              <source srcset="../static/img/content/portfolio/prev4-483w.jpg"><img src="../static/img/content/portfolio/prev4-483w.jpg" alt="Fashion4">
+            </picture>
+            <picture class="portfolioItem__prev">
+              <source srcset="../static/img/content/portfolio/prev5-483w.jpg"><img src="../static/img/content/portfolio/prev5-483w.jpg" alt="Fashion5">
+            </picture>
+          </div>
+          <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
+        </div>
     <div class="service">
       <div class="wrapper">
         <div class="row">
@@ -516,8 +677,11 @@
         </div>
       </div>
     </footer>
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/libs.min.js"></script>
-    <script src="static/js/main.js"></script>
+    <script src="../static/js/jquery.js"></script>
+    <script src="../static/js/libs.min.js"></script>
+    <!--script(src='../static/libs/magnificPopUp.js')-->
+    <script src="../static/libs/slick/slick.min.js"></script>
+    <script src="../static/libs/magnific/jquery.magnific-popup.min.js"></script>
+    <script src="../static/js/main.js"></script>
   </body>
 </html>
