--- a/dev/index.html
+++ b/dev/index.html
@@ -79,7 +79,7 @@
         <div class="about__text text text_size_m">Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat. </div>
         <div class="about__controls">
               <button class="btn btn_color_black about__btn">More info</button>
-              <button class="btn btn_color_main">Join Experiance</button>
+              <button class="btn btn_color_main about__btn">Join Experiance</button>
         </div>
         <div class="about__advantages row">
           <div class="about__advantage advantage advantage_black">
@@ -104,22 +104,22 @@
             <div class="advantage__title">Powerful security</div>
           </div>
         </div>
-        <section class="about__num">
+        <section class="about__numbers">
           <h2 class="about__numTitle title__main">Here’re some impressive numbers about us</h2>
           <div class="numPanel">
-            <div class="numItem">
+            <div class="about__numItem numItem">
               <div class="numItem__val">7533</div>
               <p class="numItem__text text">Project Complate</p>
             </div>
-            <div class="numItem">
+            <div class="about__numItem numItem">
               <div class="numItem__val">4222</div>
               <p class="numItem__text text">On Going Project</p>
             </div>
-            <div class="numItem">
+            <div class="about__numItem numItem">
               <div class="numItem__val">6980 +</div>
               <p class="numItem__text text">Happy Client</p>
             </div>
-            <div class="numItem">
+            <div class="about__numItem numItem">
               <div class="numItem__val">100%</div>
               <p class="numItem__text text">Positive Feedback</p>
             </div>
@@ -548,35 +548,33 @@
                 <h2 class="title__main title__main_pos_absolute">Clean idea and unique design</h2><span class="title__behind">Service</span>
               </div>
           <div class="service__advantages">
-            <div class="row">
-              <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
-                  <svg class="icon icon-gears ">
-                    <use xlink:href="../static/img/svg/symbol/sprite.svg#gears"></use>
-                  </svg></span>
-                <div class="serviceAdvantage__title subtitle">Excellent Features</div>
-                <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
-              </div>
-              <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
-                  <svg class="icon icon-camera ">
-                    <use xlink:href="../static/img/svg/symbol/sprite.svg#camera"></use>
-                  </svg></span>
-                <div class="serviceAdvantage__title subtitle">Simple & Clean</div>
-                <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
-              </div>
-              <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
-                  <svg class="icon icon-case ">
-                    <use xlink:href="../static/img/svg/symbol/sprite.svg#case"></use>
-                  </svg></span>
-                <div class="serviceAdvantage__title subtitle">Parallax Effect</div>
-                <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
-              </div>
-              <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
-                  <svg class="icon icon-bell ">
-                    <use xlink:href="../static/img/svg/symbol/sprite.svg#bell"></use>
-                  </svg></span>
-                <div class="serviceAdvantage__title subtitle">24/7 Support</div>
-                <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
-              </div>
+            <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
+                <svg class="icon icon-gears ">
+                  <use xlink:href="../static/img/svg/symbol/sprite.svg#gears"></use>
+                </svg></span>
+              <div class="serviceAdvantage__title subtitle">Excellent Features</div>
+              <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+            </div>
+            <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
+                <svg class="icon icon-camera ">
+                  <use xlink:href="../static/img/svg/symbol/sprite.svg#camera"></use>
+                </svg></span>
+              <div class="serviceAdvantage__title subtitle">Simple & Clean</div>
+              <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+            </div>
+            <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
+                <svg class="icon icon-case ">
+                  <use xlink:href="../static/img/svg/symbol/sprite.svg#case"></use>
+                </svg></span>
+              <div class="serviceAdvantage__title subtitle">Parallax Effect</div>
+              <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
+            </div>
+            <div class="service__advantage serviceAdvantage"><span class="serviceAdvantage__icon">
+                <svg class="icon icon-bell ">
+                  <use xlink:href="../static/img/svg/symbol/sprite.svg#bell"></use>
+                </svg></span>
+              <div class="serviceAdvantage__title subtitle">24/7 Support</div>
+              <p class="serviceAdvantage__text text text_size_m">Lorem ipsum doloar sit amet meconstur adipiscing.</p>
             </div>
           </div>
         </div>
@@ -591,7 +589,7 @@
               <h2 class="title__main title__main_pos_absolute">Choose your plan</h2><span class="title__behind">Pricing</span>
             </div>
         <div class="pricing__plans row">
-              <div class="pricing__plan plan">
+              <div class="pricing__plan plan pricing__plan_standart">
                 <header class="plan__header plan__header_standart">
                   <h3 class="plan__title">Standart</h3>
                   <div class="plan__priceBlock"><span class="plan__price">107</span><span class="plan__billingPer">Month</span></div>
@@ -608,7 +606,7 @@
                 </ul>
                 <button class="plan__btn">Get started now</button>
               </div>
-              <div class="pricing__plan plan"><span class="plan__popular text">Most popular</span>
+              <div class="pricing__plan plan pricing__plan_premium"><span class="plan__popular text">Most popular</span>
                 <header class="plan__header plan__header_premium">
                   <h3 class="plan__title">Premium</h3>
                   <div class="plan__priceBlock"><span class="plan__price">433</span><span class="plan__billingPer">Month</span></div>
@@ -625,7 +623,7 @@
                 </ul>
                 <button class="plan__btn">Get started now</button>
               </div>
-              <div class="pricing__plan plan">
+              <div class="pricing__plan plan pricing__plan_ultimate">
                 <header class="plan__header plan__header_ultimate">
                   <h3 class="plan__title">Ultimate</h3>
                   <div class="plan__priceBlock"><span class="plan__price">1233</span><span class="plan__billingPer">Month</span></div>
@@ -780,17 +778,8 @@
     </div>
     <footer class="footer">
       <div class="wrapper">
-        <div class="row">
-          <div class="footer__phone phone"><a class="phone__link" href="tel:+123999000122233">
-              <svg class="icon icon-phone color_light">
-                <use xlink:href="../static/img/svg/symbol/sprite.svg#phone"></use>
-              </svg></a>
-            <div class="phone__info text vcard">
-              <div class="fn org"> <span class="value-title" title="Marvel"></span></div>
-              <div class="tel"><span class="value-title" title="+123(999) 	000-122-233">Phone : (999) 000-122-233</span></div>
-            </div>
-          </div>
-          <div class="footer__social social"><a class="social__link" href="#twtr">
+        <div class="row footer__row">
+          <div class="footer__social footer__item social"><a class="social__link" href="#twtr">
               <svg class="icon icon-twtr color_light">
                 <use xlink:href="../static/img/svg/symbol/sprite.svg#twtr"></use>
               </svg></a><a class="social__link" href="#lnkdn">
@@ -809,7 +798,16 @@
               <svg class="icon icon-apple color_light">
                 <use xlink:href="../static/img/svg/symbol/sprite.svg#apple"></use>
               </svg></a></div>
-          <div class="footer__adress agress"><a class="adress__link" href="#map">
+          <div class="footer__phone footer__item phone"><a class="phone__link" href="tel:+123999000122233">
+              <svg class="icon icon-phone color_light">
+                <use xlink:href="../static/img/svg/symbol/sprite.svg#phone"></use>
+              </svg></a>
+            <div class="phone__info text vcard">
+              <div class="fn org"> <span class="value-title" title="Marvel"></span></div>
+              <div class="tel"><span class="value-title" title="+123(999) 	000-122-233">Phone : (999) 000-122-233</span></div>
+            </div>
+          </div>
+          <div class="footer__adress footer__item agress"><a class="adress__link" href="#map">
               <svg class="icon icon-adress color_light">
                 <use xlink:href="../static/img/svg/symbol/sprite.svg#adress"></use>
               </svg></a>
